# surprogen

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/: engine2D.hpp  main.hpp  smooth.hpp
include/engine2D/: random_discrete.hpp  sinusoids.hpp  steps.hpp  triangles.hpp
include/roughness/: discrete2D.hpp
include/solver/: slp.hpp
python/: surprogen2D.py  texgen2D.py
src/: CMakeLists.txt  main.cpp
src/engine2D/: CMakeLists.txt  random_discrete.cpp  sinusoids.cpp  steps.cpp  triangles.cpp
src/solver/: CMakeLists.txt  MMASolver.cpp  slp.cpp
texgen2D/: texgen.py
